crates/otter-runtime/tests/compile_fail/worker_message_gc_session_rejected.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/worker_message_gc_session_rejected.rs:5:28
  |
5 |     worker.accepts_message(&session);
  |            --------------- ^^^^^^^^ expected `&StructuredCloneValue`, found `&GcSession<'_, '_>`
  |            |
  |            arguments to this method are incorrect
  |
  = note: expected reference `&StructuredCloneValue`
             found reference `&GcSession<'_, '_>`
note: method defined here
 --> src/worker.rs
  |
  |     pub fn accepts_message(&self, _message: &StructuredCloneValue) -> bool {
  |            ^^^^^^^^^^^^^^^
